# infra_control/infra_control/doctype/backup_policy/backup_policy.py
@@ -1,0 +1,8 @@
+# Copyright (c) 2026, SmartChoice IQ and contributors
+# For license information, please see license.txt
+
+from frappe.model.document import Document
+
+
+class BackupPolicy(Document):
+	pass
